--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Medarbejderportal - Bilabonnement</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f7fa;
+        }
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: #ffffff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .header .logo {
+            font-size: 24px;
+            font-weight: bold;
+            color: #003087;
+        }
+        .header nav a {
+            margin-left: 20px;
+            text-decoration: none;
+            color: #003087;
+            font-weight: 500;
+        }
+        .header nav a.back-btn {
+            background-color: #003087;
+            color: #ffffff;
+            padding: 8px 15px;
+            border-radius: 5px;
+        }
+        .hero {
+            background: linear-gradient(to right, #e0e7ff, #ffffff);
+            padding: 50px 20px;
+            text-align: center;
+        }
+        .hero h1 {
+            color: #003087;
+            font-size: 36px;
+            margin-bottom: 10px;
+        }
+        .hero p {
+            color: #333;
+            font-size: 18px;
+            margin-bottom: 30px;
+        }
+        .dashboard {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            padding: 30px 20px;
+        }
+        .card {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 200px;
+            text-align: center;
+        }
+        .card h3 {
+            color: #003087;
+            margin-bottom: 10px;
+        }
+        .card a {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #003087;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #ffffff;
+            color: #666;
+            font-size: 14px;
+            border-top: 1px solid #e0e0e0;
+        }
+    </style>
